--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "xideapl/user",
     "type": "library",
-    "description": "Xidea User Component",
+    "description": "Xidea User",
     "keywords": [],
     "homepage": "http://xidea.pl",
     "license": "MIT",
@@ -12,15 +12,14 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3",
+        "php": ">=5.4.0",
         "xideapl/base": "dev-master@dev"
     },
     "require-dev": {
     },
     "autoload": {
-        "psr-0": { "Xidea\\Component\\User": "" }
+        "psr-4": { "Xidea\\User\\": "src/" }
     },
-    "target-dir": "Xidea/Component/User",
     "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
