Added default models and unit tests

--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
         "xideapl/base": "dev-master@dev"
     },
     "require-dev": {
+        "phpunit/phpunit": "3.7.*"
     },
     "autoload": {
         "psr-4": { "Xidea\\User\\": "src/" }
     },
-    "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
